# yari

./: .editorconfig  .gitignore  .tool-versions  LICENSE  Makefile  README.md  build-win.sh  compile_commands.json  sdkconfig  tmpbuild.sh
docs/: game.wasm  index.html  index.js  index.wasm
docs/media/: diagram.json
example/base/: CMakeLists.txt
example/base/main/: CMakeLists.txt  main.c
example/cart/main/: assets.h  level.h  main.c
example/fps/: sdkconfig
example/fps/main/: main.c
example/game/: CMakeLists.txt  sdkconfig
example/game/main/: CMakeLists.txt  assets.h  fonts.h  level.h  main.c
example/web/: index.html
main/: assets.h  main.c
main/libs/: raylib.h
src/raycast/: CMakeLists.txt  colors.c  colors.h  da.h  hud.c  hud.h  inputs.h  physics.c  physics.h  raycast.c  raycast.h  renderer.h  renderer_common.c
src/raycast/platform/esp32/: inputs.c  renderer.c
src/raycast/platform/raylib/: inputs.c  renderer.c  shell.html
src/raycast/platform/wasm/: inputs.c  renderer.c  wasm_runtime.c
src/raycast/platform/wasm/wasm_sysroot/: assert.h  math.h  stdlib.h
src/tools/: assets_packer.c  ds.h  font_baker.c  map_builder.c
src/yari/: CMakeLists.txt  colors.c  colors.h  da.h  inputs.h  physics.c  physics.h  renderer.h  renderer_common.c  yari.c  yari.h  yari_utils.h
src/yari/platform/esp32/: inputs.c  renderer.c
src/yari/platform/raylib/: inputs.c  renderer.c
src/yari/platform/sdl/: inputs.c  renderer.c
tools/: assets_packer.c
